attempting to fix bug as piechart not showing on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -100,7 +100,7 @@ input[type="number"] {
   width: 250px;
   z-index: 1000;
 }
-/* .charts-container {
+.charts-container {
   display: grid;
   grid-template-columns: 1fr 1fr;
 }
@@ -122,10 +122,8 @@ input[type="number"] {
     height: 300px;
     width: 99%;
   }
-  .pie-label {
-    font-size: 10px;
-  }
+
   .charts-container {
     grid-template-columns: 1fr;
   }
-} */
+}
